Update InnoSetup.java